amended sample value generation for restrictions